# coffee-inventory-datahub

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mnt/dags/: 01fetch_from_database.py  02datalake_to_datawarehouse.py  lineage_backend_demo.py  lineage_backend_taskflow_demo.py  s3_sample_dag.py  unused_01retail_origin.py  unused_02retail_stage.py
mnt/dags/temp/: airflow_tmp_cz5kk8ct
postgresql/: Dockerfile
